Revert "Merge remote-tracking branch 'refs/remotes/origin/HDPI-3220_party_persistence' into HDPI-3647"
This reverts commit afc1458fd1f8bdc413d24d12213e820ea13e9f14, reversing
changes made to 42691c7487ef3c4b35af87d666637f2c2b8d328f.